--- a/src/assets/sass/components/_audio-player.scss
+++ b/src/assets/sass/components/_audio-player.scss
@@ -27,8 +27,8 @@
         flex-direction: column;
         justify-content: center;
         color: white;
-        padding: 0 .6rem 0 .6rem;
-        margin: 0 0 .6rem 0;
+        background: linear-gradient(0deg, rgba(0,0,0,0.65) 30%, rgba(255,255,255,0) 100%);
+        padding: .6rem;
         gap: .3rem 0;
         
         &__bar{
@@ -104,8 +104,7 @@
             height: 10vh;
         }
         &-controller{
-            padding: 0 1vh 0 1vh;
-            margin: 0 0 1vh 0;
+            padding: 1vh;
             gap: .6vh 0;
             
             &__bar{
