--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -7,6 +7,7 @@
 @import 'components/buttons';
 @import 'components/audio-player';
 @import 'components/carousel';
+@import 'components/cart';
 @import 'components/newsletter';
 @import 'components/cards';
 @import 'components/footer';
