--- a/src/assets/sass/views/_page.scss
+++ b/src/assets/sass/views/_page.scss
@@ -173,10 +173,22 @@
         margin: 3rem 0 0 0;
 
         &-info{
+            display: flex;
+            flex-direction: column;
             text-align: center;
             align-self: flex-end;
             font-family: 'ProximaNova-Regular';
             margin: 0 0 0 2rem;
+            gap: 1rem 0;
+        }
+        &-button{
+            background-color: transparent;
+            outline: none;
+            border: .1rem solid black;
+            font-family: 'ProximaNova-SemiBold';
+            color: black;
+            width: 100%;
+            height: 2rem;
         }
     }
     &__redirector{
@@ -388,6 +400,21 @@
 
             &-info{
                 margin: 0 0 0 4vh;
+            }
+            &-button{
+                border: .1vh solid black;
+                height:4vh;
+                -webkit-transition: background-color ease-in-out .1s;
+                -moz-transition: background-color ease-in-out .1s;
+                -ms-transition: background-color ease-in-out .1s;
+                -o-transition: background-color ease-in-out .1s;
+                transition: background-color ease-in-out .1s;
+
+                &:hover{
+                    cursor: pointer;
+                    background-color: black;
+                    color: white;
+                }
             }
         }
         &__redirector{
