--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -1,33 +1,64 @@
-.button__like{
-    display: flex;
-    border-radius: 50%;
-    background-color: #FFFFFF;
-    opacity: 0.70;
-    align-items: center;
-    justify-content: center;
-    width: 2.2rem;
-    height: 2.2rem;
-    
-    & svg{
-        width: 100%;
-        height: 1.2rem;
+.button{
+    &__like{
+        display: flex;
+        border-radius: 50%;
+        background-color: #FFFFFF;
+        opacity: 0.70;
+        align-items: center;
+        justify-content: center;
+        width: 2.2rem;
+        height: 2.2rem;
+        
+        & svg{
+            width: 100%;
+            height: 1.2rem;
+        }
+    }
+    &__floating{
+        display: none;
     }
 }
 @media (min-width: 801px){
-    .button__like{
-        width: 4vh;
-        height: 4vh;
-        & svg{
-            height: 2.4vh;
+    .button{
+        &__like{
+            width: 4vh;
+            height: 4vh;
+            & svg{
+                height: 2.4vh;
+            }
+            &:hover{
+                cursor: pointer;
+            }
+            &:active path{
+                fill: #ff0000;
+            }
+            &:hover path:nth-child(1){
+                fill: #ff0000;
+            }
         }
-        &:hover{
-            cursor: pointer;
-        }
-        &:active path{
-            fill: #ff0000;
-        }
-        &:hover path:nth-child(1){
-            fill: #ff0000;
+        &__floating{
+            position: fixed;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            outline: none;
+            border: none;
+            border-radius: 50%;
+            background-color: #73A8A0;
+            padding: 1vh;
+            width: 5.5vh;
+            height: 5.5vh;
+            right: 8vh;
+            top: 62vh;
+
+            &:hover{
+                cursor: pointer;
+                opacity: 0.7;
+            }
+            & svg{
+                width: 1.7vh;
+                height: 1.7vh;
+            }
         }
     }
 }
