--- a/src/assets/sass/views/_page.scss
+++ b/src/assets/sass/views/_page.scss
@@ -278,6 +278,59 @@
         width: 100%;
         height: 100%;
     }
+    &__course{
+        &-banner{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            background-color: #2e2d2d;
+            width: 100%;
+            margin: 1rem 0 0 0;
+        }
+        &-info{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            margin: 0 .5rem 0 1rem;
+            gap: .6rem 0;
+        }
+        &-title{
+            font-family: 'ProximaNova-Semibold';
+            color: #ffffff;
+            font-size: 1.2rem;
+        }
+        &-type{
+            font-family: 'ProximaNova-Thin';
+            text-decoration: underline;
+            color: #d9d9d9;
+            font-size: .9rem;
+        }
+        &-duration{
+            align-self: flex-end;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            color: #D9D9D9;
+            margin: 2rem 0 0 0;
+            gap: 0 .6rem;
+            font-family: 'ProximaNova-Bold';
+            font-size: .8rem;
+
+            & svg{
+                width: 1.5rem;
+                height: 1.5rem;
+            }
+        }
+        &-content{
+            margin: 2.5rem 0 0 0;
+        }
+        &-description{
+            font-family: 'ProximaNova-SemiBold';
+            text-align: center;
+            font-size: 1rem;
+        }
+    }
 }
 
 @media (min-width: 768px){
@@ -514,6 +567,45 @@
             height: 70vh;
             width: 100%;
             margin: -70vh 0 0 0;
+        }
+        &__course{
+            &-banner{
+                margin: 5vh 0 0 0;
+            }
+            &-info{
+                gap: 2vh 0;
+                margin: 0 5vh 0 8vh;
+            }
+            &-title{
+                font-size: 5.5vh;
+            }
+            &-type{
+                font-size: 2.75vh;
+            }
+            &-duration{
+                gap: 0 1.5vh;
+                margin: 2vh 0 0 0;
+                font-size: 2.5vh;
+                -webkit-transition: color ease-in-out .2s;
+                -moz-transition: color ease-in-out .2s;
+                -ms-transition: color ease-in-out .2s;
+                -o-transition: color ease-in-out .2s;
+                transition: color ease-in-out .2s;
+
+                &:hover{
+                    color: #73A8A0;
+                }
+                & svg{
+                    width: 4.5vh;
+                    height: 4.5vh;
+                }
+            }
+            &-content{
+                margin: 4vh 0 6.4vh 0;
+            }
+            &-description{
+                font-size: 2.5vh;
+            }
         }
     }
 }
