--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -14,6 +14,7 @@
 @import 'components/form';
 @import 'components/loader';
 @import 'components/profile-posts';
+@import 'components/hamburguer-menu';
 
 //Pages Import
 @import 'views/page';
