--- a/src/assets/sass/components/_navbar.scss
+++ b/src/assets/sass/components/_navbar.scss
@@ -1,110 +1,86 @@
 .navbar{
     font-family: 'ProximaNova-Semibold';
-    font-size: 1rem;
     background-color: transparent;
     width: 100%;
-    min-height: 3.5rem;
     border-bottom: .05rem solid #C4C4C4;
-    padding: .5rem 0 .5rem 0;
+    padding: 0 0 1rem 0;
 
+    &__buttons{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 1rem 0 0 0;
+        padding: 0 1rem;
+    }
     &__redirectors{
-        width: 30%;
-        margin: 1.25rem 0 0 1.25rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 0 1.5rem;
+        font-size: .8rem;
     }
     &__redirector{
         & a{
             color: #666666;
             text-decoration: none;
-            padding: 0 0 .5rem 0;
-            border-bottom: solid .1rem transparent;
+            padding: 0 0 .2rem 0;
+            border-bottom: solid .2rem transparent;
         }
     }
     &__logo{
-        margin: 0 0 0 1rem;
+        margin: 0 auto 0 0;
         width: 5rem;
-        height: 3.5rem;
-    }
-    &__cart-index{
-        border-radius: 50%; 
-        background-color: #73A8A0;
-        color: white;
-        text-align: center;
-        width: 1rem;
-        height: 0.7rem;
-        padding: .4rem 0 0 0;
-        font-size: .5rem;
-        margin: -1.15rem 0 0 0;
+        height: 100%;
     }
     &__image{
         width: 1.2rem;
         height: 1rem;
     }
 }
-.--links{
-    display: none !important;
-}
-.--active{
-    color: black !important;
-    border-color: #73A8A0 !important;
-}
-.--space-between{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.--reverse{
-    margin: 1.5rem 2rem 0 1rem;
-}
 @media (min-width: 801px){
     .navbar{
-        min-height: 7vh;
+        padding: 0 0 2vh 0;
         border-bottom: .2vh solid #C4C4C4;
-        padding: 1vh 0 .6vh 0;
-        font-size: 1.4vh;
 
         &__redirectors{
-            min-width: 40vh;
-            margin: 3vh 2vh 0 5vh;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 0 8vh;
+            font-size: 1.5vh;
+        }
+        &__buttons{
+            margin: 2.5vh 0 0 0;
+            padding: 0 10vh;
         }
         &__redirector{
-
             & a{
-                padding: 0 0 0.6vh 0;
+                padding: 0 0 .6vh 0;
                 border-bottom: solid .4vh transparent;
 
                 &:hover{
                     opacity: 0.6;
                 }
             }
-        }
-        
+        } 
         &__logo{
             width: 10vh;
-            height: 7vh;
+            margin: 0 auto 0 auto;
 
             &:hover{
                 opacity: 0.6;
             }
-        }
-        &__cart-index{
-            width: 2vh;
-            height: 1.3vh;
-            padding: .7vh 0 0 0;
-            font-size: .7vh;
-            margin: -1.8vh 0 0 0;
         }
         &__image{
             width: 2vh;
             height: 2vh;
         }
     }
-    .--align-center{
-        align-self: center;
-    }
-    .--links{
-        display: flex !important;
-    }
-    .--reverse{
-        margin: 3vh 5vh 0 2vh;
-    }
+}
+.--active{
+    color: black !important;
+    border-color: #73A8A0 !important;
+}
+.--reverse{
+    margin: 0 0 0 auto;
 }
