--- a/src/assets/sass/components/_hamburguer-menu.scss
+++ b/src/assets/sass/components/_hamburguer-menu.scss
@@ -38,9 +38,11 @@
         display: flex;
         flex-direction: row;
         padding: .2rem 1rem .2rem 1rem;
-        justify-content: space-between;
         margin: 0 auto 0 auto;
 
+        & li{
+            margin: 0 auto 0 auto;
+        }
         & img{
             width: 1.5rem;
             height: 1.5rem;
